[project]
name = "mesonconfig"
version = "0.1.0a1"
description = "Menuconfig-like Text user Interface for configuring Meson projects."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
authors = [{name="Stellcel Remeny"}]

dependencies = [
    "textual>=0.50,<6.0",
    "rich>=13.3,<15.0"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

[project.scripts]
mesonconfig = "mesonconfig.cli:main"